# QWinUI

./: CMakeLists.txt  QWinUI_AppBarSeparator_Usage.md  QWinUI_Controls_Development_Roadmap.md  QWinUI_Design_Document.md  QWinUI_Learning_Guide.md  QWinUI_Overview.md  WinUI3_Controls_Guide.md  main.cpp  widget.cpp  widget.h
QWinUI/: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  widget_demo.cmake
QWinUI/cmake/: QWinUIConfig.cmake.in  qwinui.pc.in
QWinUI/examples/: CMakeLists.txt  QWinUISplitButton_Example.cpp  QWinUIVariableSizedWrapGrid_Example.cpp  widget.cpp  widget_demo.cmake
QWinUI/examples/basic_example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
QWinUI/include/QWinUI/: QWinUI.h  QWinUIAnimation.h  QWinUIBlurEffect.h  QWinUIFluentIcons.h  QWinUIGlobal.h  QWinUIIconConstants.h  QWinUIIconManager.h  QWinUITheme.h  QWinUIWidget.h
QWinUI/include/QWinUI/Controls/: QWinUIAcrylicBrush.h  QWinUIAppBarSeparator.h  QWinUIButton.h  QWinUIContentDialog.h  QWinUIDropDownButton.h  QWinUIIcon.h  QWinUIIconButton.h  QWinUIMenuFlyout.h  QWinUINotification.h  QWinUIPasswordBox.h  QWinUIProgressBar.h  QWinUIProgressRing.h  QWinUIRadioButton.h  QWinUIRichEditBox.h  QWinUIRichTextBlock.h  QWinUIScrollBar.h  QWinUIScrollView.h  QWinUISimpleCard.h  QWinUISlider.h  QWinUISplitButton.h  QWinUITextBlock.h  QWinUITextBox.h  QWinUITextInput.h  QWinUIToggleButton.h  QWinUIToggleSwitch.h  QWinUIToolTip.h  QWinUIVariableSizedWrapGrid.h
QWinUI/include/QWinUI/Layouts/: QWinUIFlowLayout.h
QWinUI/resources/: icons.qrc
QWinUI/scripts/: generate_icons_qrc.py
QWinUI/src/: QWinUI.cpp  QWinUIAnimation.cpp  QWinUIBlurEffect.cpp  QWinUIIconManager.cpp  QWinUITheme.cpp  QWinUIWidget.cpp
QWinUI/src/Controls/: QWinUIAcrylicBrush.cpp  QWinUIAppBarSeparator.cpp  QWinUIButton.cpp  QWinUIContentDialog.cpp  QWinUIDropDownButton.cpp  QWinUIIcon.cpp  QWinUIIconButton.cpp  QWinUIMenuFlyout.cpp  QWinUINotification.cpp  QWinUIPasswordBox.cpp  QWinUIProgressBar.cpp  QWinUIProgressRing.cpp  QWinUIRadioButton.cpp  QWinUIRichEditBox.cpp  QWinUIRichTextBlock.cpp  QWinUIScrollBar.cpp  QWinUIScrollView.cpp  QWinUISimpleCard.cpp  QWinUISlider.cpp  QWinUISplitButton.cpp  QWinUITextBlock.cpp  QWinUITextBox.cpp  QWinUITextInput.cpp  QWinUIToggleButton.cpp  QWinUIToggleSwitch.cpp  QWinUIToolTip.cpp  QWinUIVariableSizedWrapGrid.cpp
QWinUI/src/Layouts/: QWinUIFlowLayout.cpp
